# docs

./: README.md  versoes.txt  vim.txt
c_basics/: c_basics.tex
c_basics/txtz/: Makefile  Makefile.am  c_sizeof.txt  c_variables.txt  condicoes.txt  condicoes02.txt  configure.ac  ex01.txt  ex02.txt  ex03.txt  ex04.txt  ex05.txt  func01.c  func02.c  gdb1.c  gdb2.c  gdb3.c  gdb4.c  gdb_saida.txt  gdb_saida02.txt  headers.h  loops.txt  loops02.txt  strace.txt  strace02.txt  struct01.txt  struct02.txt  valgrind.txt
cursolinux/: LICENSE  LICENSE~  TODO  bakup  contact.txt  cursolinux.tex  ex1.sh  links.txt
cursolinux/exercicios/cap_3/: exercicio_cap3.txt
cursolinux/exercicios/cap_3/tmp/: Reno_01.wmv  abcd692  xyzt850  (+2 more)
cursolinux/exercicios/cap_4/: exercicio_cap4.txt
cursolinux/imgs/: img01.eps  img02.eps  img03.eps
cursolinux/txtz/: ex01.txt  ex011.txt  ex012.txt  ex02.txt  ex03.txt  ex04.txt  ex041.txt  ex05.txt  ex06.txt  ex061.txt  ex07.txt  ex071.txt  ex072.txt  ex0721.txt  ex073.txt  ex074.txt  ex075.txt  ex08.txt  ex081.txt  ex082.txt  ex085.txt  ex12.txt  ex13.txt  ex131.txt  ex132.txt  ex14.txt  ex141.txt  ex15.txt  ex151.txt  ex16.txt  ex161.txt  ex162.txt  ex163.txt  ex164.txt  ex86.txt  ex861.txt  ex862.txt  ex87.txt  ex871.txt
editing/: article.tex
shell/: TODO  bash.txt  shell.tex
shell/txtz/: con01.txt  con05.txt  ex.txt  for02.txt  shell.txt  whi01.txt  whi02.txt
shell/txtz/.svn/: entries
softlivre_v2/: softlivre_v2.tex
softlivre_v2/txtz/: ex01.txt  ex02.txt
tapes/: article.tex  ex01.txt  ex02.txt  ex03.txt  ex04.txt  ex05.txt  ex06.txt
(+19 files in other folders)
