## Makefile.am -- Processamos este arquivo para gerar o Makefile.in
## que é lido depois para gerar o 'Makefile' através do autoconf
bin_PROGRAMS = funcmax
funcmax_SOURCES = func01.c func02.c headers.h

## Se eu quisesse adicionar umas flags pro C aqui eu faria:

## Já no caso de bibliotecas eu faria:
## funcmax_LIBADD = -lm -lcrypto
## funcmax_LDADD = @
