dnl Isto é um comentário e é útil para documentar suas modificações
dnl Checa se o autoconf é pelo o menos da versão 2.58
AC_PREREQ(2.58)

dnl Define o nome, versao e e-mail do desenvolvedor
AC_INIT([funcmax], [0.1], [alex@mulatinho.net])

dnl Coloca como requisito que o automake tenha versão 1.8 ou superior
AM_INIT_AUTOMAKE(1.8)

dnl checa se existe um compilador C, linker, ln
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_RANLIB

dnl Gera um arquivo Makefile no final
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
